--- a/src/layouts/index.html
+++ b/src/layouts/index.html
@@ -57,40 +57,23 @@
         <div class="six columns">
             <h3 style="font-weight: 100">Zápisy ze schůzí</h3>
             <ul class="date-link-list">
-                <li><span>3. 1. 2014</span> <a
-                        href="http://www.ms.mff.cuni.cz/~bejce9am/buben/html/zapis_01_2014-01-03.html">První
-                    schůze &ndash; předzakládající</a></li>
-                <li><span>24. 1. 2014</span> <a
-                        href="http://www.ms.mff.cuni.cz/~bejce9am/buben/html/zapis_02_2014-01-24.html">Druhá
-                    schůze &ndash; ustavující a volební</a></li>
-                <li><span>26. 6. 2014</span> <a
-                        href="http://www.ms.mff.cuni.cz/~bejce9am/buben/html/zapis_03_2014-06-26.html">Třetí schůze</a>
+                {{#each schuze}}
+                <li>
+                    <span>{{date}}</span>
+                    <a href="{{path}}">{{title}}</a>
                 </li>
+                {{/each}}
             </ul>
-            <ul class="date-link-list">
-                <li><span>12. 4. 2015</span> <a
-                        href="http://www.ms.mff.cuni.cz/~bejce9am/buben/html/zapis_04_2015-04-12.html">Čtvrtá schůze</a>
-                </li>
-                <li><span>23. 10. 2015</span> <a href="http://www.ms.mff.cuni.cz/~bejce9am/buben/html/zapis_05_2015-10-23.html">Pátá schůze</a></li>
-            </ul>
-
         </div>
         <div class="six columns">
             <h4>Schůze správní rady</h4>
             <ul class="date-link-list">
-                <li><span>29. 7. 2014</span> <a
-                        href="http://www.ms.mff.cuni.cz/~bejce9am/buben/html/zapis_03sr1_2014-07-29.html">Schůze správní
-                    rady (1)</a></li>
-                <li><span>25. 11. 2014</span> <a href="http://www.ms.mff.cuni.cz/~bejce9am/buben/html/zapis_03sr2_2014-11-25.html">Schůze správní rady (2)</a></li>
-            </ul>
-            <ul class="date-link-list">
-                <li><span>28. 4. 2015</span> <a href="http://www.ms.mff.cuni.cz/~bejce9am/buben/html/zapis_04sr3_2015-04-28.html">Schůze správní rady (3)</a></li>
-                <li><span>3. 11. 2015</span> <a href="http://www.ms.mff.cuni.cz/~bejce9am/buben/html/zapis_05sr4_2015-11-03.html">Schůze správní rady (4)</a></li>
-                <li><span>1. 12. 2015</span> <a href="http://www.ms.mff.cuni.cz/~bejce9am/buben/html/zapis_05sr5_2015-12-01.html">Schůze správní rady (5)</a></li>
-            </ul>
-            <ul class="date-link-list">
-		<li><span>5. 1. 2016</span> <a href="http://www.ms.mff.cuni.cz/~bejce9am/buben/html/zapis_05sr6_2016-01-05.html">Schůze správní rady (6)</a></li>
-		<li><span>3. 2. 2016</span> <a href="http://www.ms.mff.cuni.cz/~bejce9am/buben/html/zapis_05sr7_2016-02-03.html">Schůze správní rady (7)</a></li>
+                {{#each spravni}}
+                <li>
+                    <span>{{date}}</span>
+                    <a href="{{path}}">{{title}}</a>
+                </li>
+                {{/each}}
             </ul>
         </div>
     </div>
