--- a/src/layouts/index.html
+++ b/src/layouts/index.html
@@ -9,73 +9,62 @@
 
     <link rel="stylesheet" href="/css/custom.css">
 </head>
-<body class="Home">
+<body>
+<h1>
+    <span>Okrašlovací spolek</span>
+    <span><a style="color:white" href="/"><img src="/images/logo.png"/></a></span>
+    <span>v Holešovicích&ndash;Bubnech</span>
+</h1>
 <header>
-    <h1><strong>Okrašlovací spolek</strong><br/>v Holešovicích&ndash;Bubnech</h1>
+    <ol>
+        <li><span>1.</span> Všeobecné zušlechťování veřejného prostoru na území hl. m. Prahy.</li>
+        <li><span>2.</span> Pořádání kulturních a společenských akcí na území hl. m. Prahy.</li>
+        <li><span>3.</span> Podpůrné politické aktivity k naplnění účelů v odst. 1. a 2.</li>
+    </ol>
+    <p>
+        <a class="button" href="/docs/stanovy.pdf">Stanovy <span>[.PDF]</span></a>
+    </p>
 </header>
-
 <main>
-    <header>
-        <div>
-            <ol>
-                <li>Všeobecné zušlechťování veřejného prostoru na území hl. m. Prahy.</li>
-                <li>Pořádání kulturních a společenských akcí na území hl. m. Prahy.</li>
-                <li>Podpůrné politické aktivity k naplnění účelů v odst. 1. a 2.</li>
-            </ol>
-        </div>
-        <div>
-            <a class="button" href="/docs/stanovy.pdf">Stanovy</a>
-        </div>
-    </header>
-
     <section>
-        <div>
-            <h3>Zápisy ze schůzí</h3>
-            <ul class="date-link-list">
-                {{#each schuze}}
-                <li>
-                    <span>{{date}}</span>
-                    <a href="{{path}}">{{title}}</a>
-                </li>
-                {{/each}}
-            </ul>
-        </div>
-        <div>
-            <h4>Schůze správní rady</h4>
-            <ul class="date-link-list">
-                {{#each spravni}}
-                <li>
-                    <span>{{date}}</span>
-                    <a href="{{path}}">{{title}}</a>
-                </li>
-                {{/each}}
-            </ul>
-        </div>
+        <header>Zápisy ze schůzí</header>
+        <ul>
+            {{#each schuze}}
+            <li>
+                <a href="{{path}}"><span>{{date}}</span> {{title}}</a>
+            </li>
+            {{/each}}
+        </ul>
     </section>
-
-
+    <section>
+        <header>Schůze správní rady</header>
+        <ul>
+            {{#each spravni}}
+            <li>
+                <a href="{{path}}"><span>{{date}}</span> {{title}}</a>
+            </li>
+            {{/each}}
+        </ul>
+    </section>
 </main>
-
 <footer>
-    <div>
+    <section>
+        <header>
+            Okrašlovací spolek v Holešovicích–Bubnech
+        </header>
         <p>
-            <strong>Okrašlovací spolek</strong> <span>v Holešovicích&ndash;Bubnech</span>
-        </p>
-        <p>
-            Schnirchova 1084/29<br/>
-            Holešovice<br/>
+            Schnirchova 1084/29<br>
+            Holešovice<br>
             170 00 Praha 7
         </p>
         <p>
-            IČO: 0298&nbsp;8470</br>
+            IČO: 0298&nbsp;8470<br>
             Spisová značka: L 60739 vedená u Městského soudu v Praze
         </p>
-    </div>
-    <div>
-        <p>Email: <a href="mailto:spravni-rada@hobutrol.cz">spravni-rada@hobutrol.cz</a></p>
 
-        <p>Pracovní skupina WEB: <a href="mailto:web-wg@hobutrol.cz">web-wg@hobutrol.cz</a></p>
-    </div>
+        <p>Email: <a href="mailto:spravni-rada@hobutrol.cz">spravni-rada@hobutrol.cz</a><br/>
+            Pracovní skupina Web: <a href="mailto:web-wg@hobutrol.cz">web-wg@hobutrol.cz</a></p>
+    </section>
 </footer>
 
 <!-- Piwik -->
@@ -83,17 +72,20 @@
     var _paq = _paq || [];
     _paq.push(['trackPageView']);
     _paq.push(['enableLinkTracking']);
-    (function() {
-        var u="//analytics.snappy.pro/";
-        _paq.push(['setTrackerUrl', u+'piwik.php']);
+    (function () {
+        var u = "//analytics.snappy.pro/";
+        _paq.push(['setTrackerUrl', u + 'piwik.php']);
         _paq.push(['setSiteId', 4]);
-        var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
-        g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
+        var d = document, g = d.createElement('script'), s = d.getElementsByTagName('script')[0];
+        g.type = 'text/javascript';
+        g.async = true;
+        g.defer = true;
+        g.src = u + 'piwik.js';
+        s.parentNode.insertBefore(g, s);
     })();
 </script>
-<noscript><p><img src="//analytics.snappy.pro/piwik.php?idsite=4" style="border:0;" alt="" /></p></noscript>
+<noscript><p><img src="//analytics.snappy.pro/piwik.php?idsite=4" style="border:0;" alt=""/></p></noscript>
 <!-- End Piwik Code -->
-
 
 </body>
 </html>
