--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -110,7 +110,7 @@ body > main {
   justify-content: center;
   flex-wrap: wrap;
 
-  padding: 3.2rem;
+  padding: 3.2rem 0;
 }
 
 body > main > section {
