--- a/src/layouts/index.html
+++ b/src/layouts/index.html
@@ -12,7 +12,7 @@
 <body>
 <h1>
     <span>Okrašlovací spolek</span>
-    <span><a style="color:white" href="/"><img src="/images/logo.png"/></a></span>
+    <a style="color:white" href="/"><img src="/images/logo.png"/></a>
     <span>v Holešovicích&ndash;Bubnech</span>
 </h1>
 <header>
