--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -104,7 +104,7 @@ body > header > ol {
   margin: 0 0 2rem;
   padding: 0;
 
-  max-width: 100%;
+  max-width: 100%; // For flex-wrap to work in IE11 (?)
 }
 
 body > header > ol > li {
