--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -57,7 +57,7 @@ a.button {
   border: 0 none;
   border-radius: .175rem;
   box-shadow: inset 0 0 .8rem rgba(100, 0, 0, .15);
-  background: #E06E63;
+  background: #0F4D69;
   color: #ffe0ef;
   height: 2.4rem;
   width: 16rem;
