--- a/layouts/zapis.html
+++ b/layouts/zapis.html
@@ -7,22 +7,22 @@
 
     <title>{{title}} &ndash; Okrašlovací spolek v Holešovicích&ndash;Bubnech</title>
 
-    <link rel="stylesheet" href="/css/custom.css">
+    <link rel="stylesheet" href="/css/header.css">
+    <link rel="stylesheet" href="/css/report.css">
 </head>
 <body class="Zapis">
 <header>
-    <h1><a href="/"><b>Okrašlovací spolek</b><br/>v Holešovicích&ndash;Bubnech</a></h1>
+    <h1>
+        <a href="/">
+            <img src="/images/logo.svg"/>
+            <span>Okrašlovací spolek<br/>v Holešovicích&ndash;Bubnech</span>
+        </a>
+    </h1>
 </header>
 <main>
-    <article class="u-max-full-width">
-        <header>
-            <h1>{{title}}</h1>
-            <small>{{date}}</small>
-        </header>
-
+    <section>
         {{{contents}}}
-
-    </article>
+    </section>
 </main>
 
 </body>
