--- a/layouts/zapis.html
+++ b/layouts/zapis.html
@@ -23,6 +23,10 @@
     <section>
         {{{contents}}}
     </section>
+    <footer>
+        <a href="/{{previous.path}}">{{previous.shortTitle}}</a>
+        <a href="/{{next.path}}">{{next.shortTitle}}</a>
+    </footer>
 </main>
 
 </body>
