Adding footer to all pages

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -8,6 +8,7 @@
     <title>Okrašlovací spolek v Holešovicích&ndash;Bubnech</title>
 
     <link rel="stylesheet" href="/css/header.css"/>
+    <link rel="stylesheet" href="/css/footer.css"/>
     <link rel="stylesheet" href="/css/home.css"/>
 </head>
 <body>
@@ -91,7 +92,7 @@
     _paq.push(['trackPageView']);
     _paq.push(['enableLinkTracking']);
     (function () {
-        var u = "//analytics.snappy.pro/";
+        var u = "//analytics.sprinters.cz/";
         _paq.push(['setTrackerUrl', u + 'piwik.php']);
         _paq.push(['setSiteId', 4]);
         var d = document, g = d.createElement('script'), s = d.getElementsByTagName('script')[0];
@@ -102,7 +103,7 @@
         s.parentNode.insertBefore(g, s);
     })();
 </script>
-<noscript><p><img src="//analytics.snappy.pro/piwik.php?idsite=4" style="border:0;" alt=""/></p></noscript>
+<noscript><p><img src="//analytics.sprinters.cz/piwik.php?idsite=4" style="border:0;" alt=""/></p></noscript>
 <!-- End Piwik Code -->
 
 </body>
