--- a/layouts/zapis.html
+++ b/layouts/zapis.html
@@ -8,6 +8,7 @@
     <title>{{title}} &ndash; Okrašlovací spolek v Holešovicích&ndash;Bubnech</title>
 
     <link rel="stylesheet" href="/css/header.css">
+    <link rel="stylesheet" href="/css/footer.css"/>
     <link rel="stylesheet" href="/css/report.css">
 </head>
 <body class="Zapis">
@@ -28,6 +29,49 @@
         <a href="/{{next.path}}">{{next.shortTitle}}</a>
     </footer>
 </main>
+
+<footer>
+    <section>
+        <div>
+            <header>
+                Okrašlovací spolek v Holešovicích–Bubnech
+            </header>
+            <p>
+                Schnirchova 1084/29<br>
+                Holešovice<br>
+                170 00 Praha 7
+            </p>
+            <p>
+                IČO: 0298&nbsp;8470<br>
+                Spisová značka: L 60739 vedená u Městského soudu v Praze
+            </p>
+        </div>
+        <div>
+            <p>Email: <a href="mailto:spravni-rada@hobutrol.cz">spravni-rada@hobutrol.cz</a></p>
+            <p>Pracovní skupina Web: <a href="mailto:web-wg@hobutrol.cz">web-wg@hobutrol.cz</a></p>
+        </div>
+    </section>
+</footer>
+
+<!-- Piwik -->
+<script type="text/javascript">
+    var _paq = _paq || [];
+    _paq.push(['trackPageView']);
+    _paq.push(['enableLinkTracking']);
+    (function () {
+        var u = "//analytics.sprinters.cz/";
+        _paq.push(['setTrackerUrl', u + 'piwik.php']);
+        _paq.push(['setSiteId', 4]);
+        var d = document, g = d.createElement('script'), s = d.getElementsByTagName('script')[0];
+        g.type = 'text/javascript';
+        g.async = true;
+        g.defer = true;
+        g.src = u + 'piwik.js';
+        s.parentNode.insertBefore(g, s);
+    })();
+</script>
+<noscript><p><img src="//analytics.sprinters.cz/piwik.php?idsite=4" style="border:0;" alt=""/></p></noscript>
+<!-- End Piwik Code -->
 
 </body>
 </html>
