--- a/src/scss/report.scss
+++ b/src/scss/report.scss
@@ -3,7 +3,7 @@
 body > main {
   background-color: white;
   max-width: $max-page-width;
-  margin: 0 auto 3 * $module;
+  margin: 0 auto;
 
   > section {
     padding: 1.5 * $module;
