Some css changes

--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -1,5 +1,6 @@
 $module: 1.614rem;
-$text-color: #20201e;
+$text-color: #33332f;
 $link-color: #0F4D69;
 
 $max-page-width: 980px;
+$base-font-size: 16px;
