--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -3,7 +3,7 @@
 html, body {
   margin: 0;
   padding: 0;
-  font-size: 16px;
+  font-size: $base-font-size;
 }
 
 body {
@@ -41,7 +41,7 @@ body > header {
   > h1 {
     display: flex;
     justify-content: center;
-    padding: 1.5 * $module 0 $module;
+    padding: 1.5 * $module 0;
 
     a {
       color: #6c6c63;
